--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -38,7 +38,8 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            <h1>Safari Type</h1>
+            <h1>Who Are You?</h1>
+            <p class="click">Please click on the options below</p>
           </div>
         </div>
         <div class="row">
@@ -74,7 +75,8 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            <h1>Experience</h1>
+            <h1>African Experiences</h1>
+            <p class="click">Please click on the options below</p>
           </div>
         </div>
         <div class="row">
