--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -153,7 +153,8 @@
               <div class="safari-type">
                 <div class="row">
                   <div class="col-xs-12">
-                    <h1>Safari Type</h1>
+                    <h1>Who Are You?</h1>
+                    <p class="click">Please click on the options below</p>
                   </div>
                 </div>
                 <div class="row">
@@ -184,7 +185,8 @@
               <div class="experience white">
                 <div class="row">
                   <div class="col-xs-12">
-                    <h1>Experience</h1>
+                    <h1>African Experiences</h1>
+                    <p class="click">Please click on the options below</p>
                   </div>
                 </div>
                 <div class="row">
