--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -75,7 +75,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            <h1>African Experiences</h1>
+            <h1>Africa Experiences</h1>
             <p class="click">Please click on the options below</p>
           </div>
         </div>
