--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -427,14 +427,22 @@ strong {font-weight:500;}
   }
 }
 
-ul.links {list-style:none; margin:0; padding:0;
-  li {width: 49%; float: left; margin: 0 20px 10px 0; border: 1px solid #e7e7e7; padding: 20px; 
-    a {color: #282629; font-size: 16px; font-weight: 400;}
-    span {font-size:12px; line-height:20px; display: block; line-height: 20px;    height: 36px;
-    overflow: hidden;}
-  }
-  li:nth-child(2n+2) {margin-right:0;}
+.more {border: 1px solid #aaa; width: 80%; margin: 20px 10% 0 10%; padding:20px; text-align:left;
+  h3 {margin:0 0 5px 0; font-weight:400;}
 }
+
+.morecontent span {
+    display: none;
+}
+
+.best {text-align: center; background: #f4f4f4;
+  ul {margin:0;}
+}
+  .top {padding: 70px 0 90px 0!important;}
+  .bottom {padding:0 0 90px 0;
+    h1 {margin:0 0 30px 0!important;}
+  }
+
 
 /*** xs ***/
 
