--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -56,20 +56,22 @@
       </div>
 
       <% if @activity.locations.present? %>
-          <div class="locations-activities">
+          <div id="welcome" class="locations search best top">
             <div class="container">
               <div class="row">
                 <div class="col-xs-12">
-                  <h1>Best Destinations </br><span>for <%= @activity.name %></span></h1>
-                  <ul class="list-inline list-unstyled">
+                  <h1>Best Destinations <span>for <%= @activity.name %></span></h1>
+                  <ul class=" list-inline list-unstyled cf">
                     <% @activity.locations.each do |location| %>
-                      <li>
-                        <%= link_to(image_fu(location.cover_image, "80x80#c", :alt => location.cover_image.alt_tag), location_link(location)) if location.cover_image.present? %>
-                        <h3><%= link_to strip_tags(location.name), location_link(location) %></h3>
-                        <div class="description"><%=raw truncate(strip_tags(location.description), :length => 120) %></div>
+                      <li class="search-item">
+                        <%= link_to(image_fu(location.cover_image, "105x80#c", :alt => location.cover_image.alt_tag),refinery.locations_location_path(location)) if location.cover_image.present? %>
+                        <div class="search-item-body">
+                          <h3><%= link_to strip_tags(location.name), refinery.locations_location_path(location) %></h3>
+                          <div class="description"><%=raw truncate(location.description, :length => 120) %></div>
+                        </div>
                       </li>
                     <% end %>
-                  </ul>
+                  </ul>                 
                 </div>
               </div>
             </div>
@@ -77,18 +79,22 @@
       <% end %>
 
       <% if @activity.accommodations.present? %>
-        <div class="accommodations-activities">
+        <div id="welcome" class="locations search best bottom">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h1>Best Lodges </br><span>for <%= @activity.name %></span></h1>
-                <ul class="list-inline list-unstyled">
+                <h1>Best Lodges <span>for <%= @activity.name %></span></h1>
+                <ul class=" list-inline list-unstyled cf">
                   <% @activity.accommodations.each do |accommodation| %>
-                    <li>
-                      <%= link_to(image_fu(accommodation.cover_image, "80x80#c", :alt => accommodation.cover_image.alt_tag), refinery.accommodations_accommodation_path(accommodation)) if accommodation.cover_image.present? %>
-                      <h3><%= link_to strip_tags(accommodation.name), refinery.accommodations_accommodation_path(accommodation) %></h3>
-                      <div class="description"><%=raw truncate(strip_tags(accommodation.description), :length => 120) %></div>
-                    </li>
+                    <% if accommodation.is_valid? %>
+                      <li class="search-item">    
+                        <%= link_to(image_fu(accommodation.cover_image, "105x80#c", :alt => accommodation.cover_image.alt_tag),refinery.accommodations_accommodation_path(accommodation)) if accommodation.cover_image.present? %>               
+                        <div class="search-item-body">
+                          <h3><%= link_to strip_tags(accommodation.name), refinery.accommodations_accommodation_path(accommodation) %></h3>
+                          <div class="description"><%=raw truncate(accommodation.description, :length => 120) %></div>
+                        </div>
+                      </li>
+                    <% end %>
                   <% end %>
                 </ul>
               </div>
