--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -438,8 +438,8 @@ strong {font-weight:500;}
 .best {text-align: center; background: #f4f4f4;
   ul {margin:0;}
 }
-  .top {padding: 70px 0 90px 0!important;}
-  .bottom {padding:0 0 90px 0;
+  .top {padding: 70px 0 0 0!important;}
+  .bottom {padding:90px 0!important;
     h1 {margin:0 0 30px 0!important;}
   }
 
