--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            <h1>Who Are You?</h1>
+            <h1>Best For ...</h1>
             <p class="click">Please click on the options below</p>
           </div>
         </div>
