--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -241,8 +241,8 @@ strong {font-weight:500;}
   ul li {padding:0 23px;
     a {text-transform:uppercase;}
   }
-  img {margin:30px 0 50px 0;}
-  .copyright {font-size:11px; line-height:17px;}
+  img.logo {margin:30px auto; display:block;}
+  .copyright {font-size:11px; line-height:17px; margin-top:30px;}
 }
 
 .bookings {width:80%; margin:0 auto;
@@ -485,7 +485,7 @@ strong {font-weight:500;}
     .text {-webkit-column-count:1; -moz-column-count:1; column-count:1;}
     .btn-custom,.btn-custom:hover {font-size:14px!important; margin-top:0!important;}
   }
-  .controls .bx-next {display:none;}
+  .controls .bx-next,.controls .bx-prev {display:none;}
   .bx-wrapper,.bx-viewport {width:218px!important; left:0!important;}
   .safari-type {padding:30px 0;
     h1 {font-size:24px; margin:0 0 30px 0;}
@@ -531,7 +531,7 @@ strong {font-weight:500;}
   }
   .social {padding:30px 0;}
   .footer {text-align:center; padding:0 0 28px 0;
-    img {margin:30px auto; width:60%;}
+    img.logo {margin:30px auto; width:60%;}
     .copyright {font-size:8px;}
   }
   #welcome {padding:0 0 30px 0;}
@@ -576,7 +576,7 @@ strong {font-weight:500;}
     .banner-text h1 {font-size:70px!important; letter-spacing:5px!important;}
     .banner-text h2 {font-size:36px!important; letter-spacing:3px!important;}
   }
-  .controls .bx-next {right:20px!important;}
+  .controls .bx-next,.controls .bx-prev {right:20px!important;}
   .bx-wrapper,.bx-viewport {width:664px!important;}
   .experience .experience-footer {
     h3 {font-size:16px;}
@@ -611,7 +611,7 @@ strong {font-weight:500;}
   .navbar ul li a, .navbar ul li a:hover {margin-left:20px;}
   .navbar ul.social-media {margin-right:20px;}
   .master-slider img.logo {width:40%;}
-  .controls .bx-next {right:20px!important;}
+  .controls .bx-next,.controls .bx-prev {right:20px!important;}
   .bx-wrapper,.bx-viewport {width:887px!important;}
   .locations .search-item,.activities .search-item,.accommodations .search-item {width:47%;}
   .blog_show .blog_rhs .search-item .search-item-body {width:55%;}
