--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -161,6 +161,7 @@
                   <div class="col-xs-12">
                     <div class="controls">
                       <span class="safari-slider-next"></span>
+                      <span class="safari-slider-prev"></span>
                     </div>
                     <ul class="bxsliderSafari">
                       <% safaris.each do |item| %>
@@ -193,6 +194,7 @@
                   <div class="col-xs-12">
                     <div class="controls">
                       <span class="experience-slider-next"></span>
+                      <span class="experience-slider-prev"></span>
                     </div>
                     <ul class="bxsliderExperience">
                       <% activities.each_slice(7).each do |items| %>
