--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -235,7 +235,7 @@ strong {font-weight:500;}
   ul {margin:0;}
 }
 
-.footer {background:#000000; padding:50px 0; font-size:16px; color:#999999; text-align:center;
+.footer {background:#000000; padding:30px 0 50px 0; font-size:16px; color:#999999; text-align:center;
   a {color:#999999; @include animate ();}
   a:hover {color:#ffffff;}
   ul li {padding:0 23px;
