--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -153,7 +153,7 @@
               <div class="safari-type">
                 <div class="row">
                   <div class="col-xs-12">
-                    <h1>Who Are You?</h1>
+                    <h1>Best For ...</h1>
                     <p class="click">Please click on the options below</p>
                   </div>
                 </div>
