--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -47,10 +47,10 @@
       <div id="welcome">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 div1">
-              <p>
+            <div class="col-xs-12 div1 truncate_text">
+              <!--<p>-->
                 <%=raw @activity.description %>
-              </p>
+              <!--</p>-->
             </div>
           </div>
         </div>
