--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,6 +37,9 @@ $color:#282629;
   padding-left:0;
 }
 
+.white,.white .safari-type, .white .bx-viewport {background:#ffffff!important;}
+.grey, .grey .bx-viewport {background:#f4f4f4!important;}
+
 body {@include main_font (); font-size: 14px; line-height: 24px; overflow-x:hidden;}
 body.modal-open {overflow:auto; margin-right:0!important; transform:none!important;}
 
@@ -116,8 +119,8 @@ strong {font-weight:500;}
 
 .master-slider {text-align:center;
   .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url(../assets/overlay.png) repeat;}
-  .search {background:rgba(0,0,0,0.6); padding:12px 0; position:absolute; width:100%; bottom:0; z-index:2000; text-align:left; color:#ffffff;
-    h2 {margin:0; color:#ffffff; line-height:18px;}
+  .search {background:rgba(0,0,0,0.6); padding:5px 0; position:absolute; width:100%; bottom:0; z-index:2000; text-align:left; color:#ffffff;
+    h2 {margin:0; color:#ffffff; line-height:14px;}
     .form-control {width:100%; border: 0; border-radius: 0; height: 42px;}
     .btn-custom {@include button (42px,42px,#ffffff,1px solid $orange,$orange,0,16px,0); width:100%;}
   }
@@ -138,20 +141,20 @@ strong {font-weight:500;}
 }
 
 
-#home_page .welcome {padding:100px 0 80px 0; text-align:center;
-  h1 {margin:0 0 40px 0;}
+#home_page .welcome {padding:50px 0 30px 0; text-align:center;
+  h1 {margin:0 0 30px 0;}
   h2 {font-size:20px; line-height:28px;}
   .text {-webkit-column-count:2; -moz-column-count:2; column-count:2; -webkit-column-gap:30px; -moz-column-gap:30px; column-gap:30px;
     p {text-align:justify;}
   }
-  .btn-custom,.btn-custom:hover {@include button (); margin:20px 0;}
+  .btn-custom,.btn-custom:hover {@include button (); margin:10px 0 20px 0;}
 }
 
-  .safari-type,.experience {text-align:center; background:#f4f4f4; padding:100px 0;
+  .safari-type,.experience {text-align:center; background:#f4f4f4; padding:50px 0;
     h1 {margin:0 0 10px 0;}
     .controls {position:absolute; width:100%;
-      .safari-slider-next a,.experience-slider-next a {background:url(../assets/control-right.gif) no-repeat; height:40px; width:40px; position:absolute; right:-5px; top:120px;}
-      .safari-slider-prev a,.experience-slider-prev a {background:url(../assets/control-left.gif) no-repeat; height:40px; width:40px; position:absolute; right:-5px; top:165px;}
+      .safari-slider-next a,.experience-slider-next a {background:url(../assets/control-right.png) no-repeat; height:40px; width:40px; position:absolute; right:-5px; top:120px;}
+      .safari-slider-prev a,.experience-slider-prev a {background:url(../assets/control-left.png) no-repeat; height:40px; width:40px; position:absolute; right:-5px; top:165px;}
     }
     .bx-wrapper {margin:0!important;}
     .bx-viewport {background:#f4f4f4; box-shadow:none; border:0; height:330px!important;
@@ -168,7 +171,7 @@ strong {font-weight:500;}
   }
 .safari-experience { background:#f4f4f4;}
 
-.experience {padding:0 0 100px 0;
+.experience {padding:0 0 50px 0;
   .bx-viewport .experience-item {margin:0 0 6px 5px; float:left;
     a .caption {top:50px;}
   }
@@ -184,7 +187,7 @@ strong {font-weight:500;}
   }
 }
 
-.why-tma {padding:100px 0; text-align:center;
+.why-tma {padding:50px 0; text-align:center;
   h1 {margin:0 0 40px 0;}
   .why-tma-item {margin: 0 auto 20px auto; width: 170px;
     h3 {margin:20px 0 15px 0;}
@@ -194,7 +197,7 @@ strong {font-weight:500;}
   .btn-custom,.btn-custom:hover {@include button ();}
 }
 
-.recent-blogs {background:#f4f4f4; padding:100px 0 80px 0; text-align:center;
+.recent-blogs {background:#f4f4f4; padding:50px 0 30px 0; text-align:center;
   h1 {margin:0 0 40px 0;}
   .recent-blog-item {margin-bottom:20px; border-bottom:1px solid #b7b7b7;
     .caption {padding:15px; text-align:left; background:#ffffff;
@@ -211,7 +214,7 @@ strong {font-weight:500;}
   }
 }
 
-.contact {background:#fca33b url(/assets/bg-contact.jpg) top center no-repeat; height:1020px; text-align:center; padding:100px 0; color:#ffffff;
+.contact {background:#fca33b url(/assets/bg-contact.jpg) top center no-repeat; height:1020px; text-align:center; padding:50px 0; color:#ffffff;
   form {background:rgba(0,0,0,0.7); padding:50px 90px;
     h1 {color:#ffffff; background:url(/assets/bg-h1.gif) bottom center no-repeat; padding-bottom:25px; margin:0;}
     p {margin:25px 0 10px 0;}
@@ -282,7 +285,7 @@ strong {font-weight:500;}
     a {color:$color;}
 }
 
-.locations,.activities,.accommodations,.locations {padding:70px 0 80px 0; text-align:center;
+.locations,.activities,.accommodations,.locations {padding:20px 0 30px 0; text-align:center;
   h1,h2 {text-align:center;}
   h2.slider {margin:30px 0 10px 0; font-size:36px;}
   p {text-align:center;}
@@ -306,10 +309,10 @@ strong {font-weight:500;}
   .search-item-body {width:100%;}
 }
 
-#welcome {padding:0 0 80px 0; text-align:center;
-  h1 {margin:30px 0;}
+#welcome {padding:0 0 30px 0; text-align:center;
+  h1 {margin:20px 0 30px 0;}
   p:not(.click) {text-align:justify;}
-  .btn-custom,.btn-custom:hover {@include button (); margin-top:30px;}
+  .btn-custom,.btn-custom:hover {@include button (); margin-top:10px;}
   .btn-enquire,.btn-enquire:hover {background:$color; color:#ffffff; margin:0 0 20px 0!important; padding:0 44px;}
   .modal {
     .modal-dialog {width:780px;
@@ -333,10 +336,10 @@ strong {font-weight:500;}
   .description p {text-align:left;}
 }
 
-.accommodation {text-align:center; padding-bottom:80px; 
+.accommodation {text-align:center; padding-bottom:50px; 
   h1 {margin-top:50px;}
   p:not(.click) {text-align:justify;}
-  .btn-custom,.btn-custom:hover {@include button (); margin-top:30px;}
+  .btn-custom,.btn-custom:hover {@include button (); margin-top:10px;}
   .monthbar { width:100%; height:20px; border-radius:10px; overflow:hidden; }
   .month { float:left; width:8.33%; line-height:20px; font-family:roboto; font-size:10px; text-align:center; color: #ffffff; }
   .low { background:#b6c274; }
@@ -374,7 +377,7 @@ strong {font-weight:500;}
 
 /****BLOG****/
 
-.blog_list {background:#F4F4F4; padding:50px 0 80px 0; margin-top:20px;
+.blog_list {background:#F4F4F4; padding:50px 0 30px 0; margin-top:20px;
   h1 {margin:0 0 40px 0; text-align:center;}
   .blog_post_pod {margin:0 auto 20px auto; border-bottom:1px solid #b7b7b7;
     .caption {padding:15px; text-align:left; background:#ffffff;
@@ -391,7 +394,7 @@ strong {font-weight:500;}
   }
 }
 
-.blog_show {padding:0 0 100px 0;
+.blog_show {padding:0 0 50px 0;
   h1 {margin-left:15px;}
   #blog_post {
     img {margin-bottom:30px;}
