--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -119,7 +119,7 @@ strong {font-weight:500;}
 
 .master-slider {text-align:center;
   .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url(../assets/overlay.png) repeat;}
-  .search {background:rgba(0,0,0,0.6); padding:5px 0; position:absolute; width:100%; bottom:0; z-index:2000; text-align:left; color:#ffffff;
+  .search {background:rgba(0,0,0,0.6); padding:10px 0; position:absolute; width:100%; bottom:0; z-index:2000; text-align:left; color:#ffffff;
     h2 {margin:0; color:#ffffff; line-height:14px;}
     .form-control {width:100%; border: 0; border-radius: 0; height: 42px;}
     .btn-custom {@include button (42px,42px,#ffffff,1px solid $orange,$orange,0,16px,0); width:100%;}
@@ -197,7 +197,7 @@ strong {font-weight:500;}
   .btn-custom,.btn-custom:hover {@include button ();}
 }
 
-.recent-blogs {background:#f4f4f4; padding:50px 0 30px 0; text-align:center;
+.recent-blogs {background:#ededed; padding:50px 0 30px 0; text-align:center;
   h1 {margin:0 0 40px 0;}
   .recent-blog-item {margin-bottom:20px; border-bottom:1px solid #b7b7b7;
     .caption {padding:15px; text-align:left; background:#ffffff;
@@ -444,8 +444,8 @@ strong {font-weight:500;}
 .best {text-align: center; background: #f4f4f4;
   ul {margin:0;}
 }
-  .top {padding: 70px 0 0 0!important;}
-  .bottom {padding:90px 0!important;
+  .top {padding: 20px 0 0 0!important;}
+  .bottom {padding:40px 0!important;
     h1 {margin:0 0 30px 0!important;}
   }
 
